# a-stock-ranking

./: .gitignore  CLAUDE.md  README.md  config.json  start.sh
backend/: pyproject.toml  requirements.txt  run.py
backend/app/: __init__.py  calculator.py  data_fetcher.py  database.py  main.py  routes.py
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  api.js  index.css  main.jsx
frontend/src/components/: WeightedRankHeatmap.jsx  WeightedRankTable.jsx  WeightedReturnFormulaForm.jsx  WeightedReturnHeatmap.jsx  WeightedReturnRankingTable.jsx
frontend/src/context/: AppContext.jsx
frontend/src/pages/: WeightedRankHeatmapPage.jsx  WeightedRankPage.jsx  WeightedReturnHeatmapPage.jsx  WeightedReturnRankingPage.jsx
frontend/src/utils/: stockUrl.js
